test/good/nullables/nullable09.px

func f<A,B>(x: A?): [B] def
    print x
    return [x]

x = null
y = f(x)
print y

z: [Float?] = y
print z.map(_ ?? 1.5)
