test/bad/generics/def09.px

func f<A>(x: A, y: A = default(A)) def
    print x

print f(1)
